[gd_scene load_steps=23 format=2]

[ext_resource path="res://king.gd" type="Script" id=1]
[ext_resource path="res://Art/princess.png" type="Texture" id=2]
[ext_resource path="res://Art/king/idle/king_animation_idle1.png" type="Texture" id=3]
[ext_resource path="res://Art/king/idle/king_animation_idle2.png" type="Texture" id=4]
[ext_resource path="res://Art/king/idle/king_animation_idle3.png" type="Texture" id=5]
[ext_resource path="res://Art/king/idle/king_animation_idle4.png" type="Texture" id=6]
[ext_resource path="res://Art/king/attack/king_animation_attack1.png" type="Texture" id=7]
[ext_resource path="res://Art/king/attack/king_animation_attack2.png" type="Texture" id=8]
[ext_resource path="res://Art/king/attack/king_animation_attack3.png" type="Texture" id=9]
[ext_resource path="res://Art/king/attack/king_animation_attack4.png" type="Texture" id=10]
[ext_resource path="res://Art/king/run_cycle/king_animation_run1.png" type="Texture" id=11]
[ext_resource path="res://Art/king/run_cycle/king_animation_run2.png" type="Texture" id=12]
[ext_resource path="res://Art/king/run_cycle/king_animation_run3.png" type="Texture" id=13]
[ext_resource path="res://Art/king/run_cycle/king_animation_run4.png" type="Texture" id=14]
[ext_resource path="res://Art/king/stare/king.png" type="Texture" id=15]
[ext_resource path="res://Sound/hit_king.wav" type="AudioStream" id=16]

[sub_resource type="Animation" id=1]

resource_name = "attack"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=3]

resource_name = "rewind"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

resource_name = "walk"
length = 1.0
loop = false
step = 0.1

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "stare",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 9.44554, 13.9734 )

[node name="king" type="KinematicBody2D" groups=[
"king",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
patrol_distance = 200
weapon_scene_path = "res://Weapons/Spear.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/attack = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/rewind = SubResource( 3 )
anims/walk = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="sprite" type="Sprite" parent="."]

visible = false
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

frames = SubResource( 5 )
animation = "attack"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

position = Vector2( 0.103135, 2.25126 )
shape = SubResource( 6 )

[node name="WeaponSpawnPoint" type="Node2D" parent="."]

position = Vector2( 0, 6 )

[node name="WeaponAnchorPoint" type="Node2D" parent="WeaponSpawnPoint"]

[node name="WaitTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AttackTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="hit" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 16 )
volume_db = -3.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]


